--- a/packages/polar-app-public/polar-google-cloud-language/package.json
+++ b/packages/polar-app-public/polar-google-cloud-language/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "if [ -z \"$(find . -name '*Test.js' -o -name '*TestN.js' -o -name '*TestNK.js')\" ]; then echo 'No tests'; else yarn run mocha; fi;",
-    "mocha": "mocha -p --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
+    "mocha": "mocha -p --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "karma": "karma start --single-run --browsers ChromeHeadless karma.conf.js",
     "compile": "tsc",
     "eslint": "eslint -c ./.eslintrc.json .",
