--- a/packages/polar-app-private/polar-admin/package.json
+++ b/packages/polar-app-private/polar-admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-admin",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "",
   "main": "index.js",
   "private": true,
@@ -17,9 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "firebase-tools": "=9.16.0",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "polar-eslint": "^2.1.108",
+    "polar-typescript": "^2.1.108",
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "@google-cloud/firestore": "=4.13.2",
