--- a/packages/polar-app-private/polar-doc-preview-loader/package.json
+++ b/packages/polar-app-private/polar-doc-preview-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-doc-preview-loader",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "Loads up doc preview URLs into be queued for processing",
   "main": "index.js",
   "scripts": {
@@ -22,18 +22,18 @@
     "@types/node": "=14.14.35",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "@google-cloud/tasks": "=1.9.0",
     "firebase-admin": "=9.11.0",
-    "polar-firebase": "^2.1.107",
-    "polar-firebase-admin": "^2.1.107",
-    "polar-shared": "^2.1.107",
-    "polar-webapp-links": "^2.1.107"
+    "polar-firebase": "^2.1.108",
+    "polar-firebase-admin": "^2.1.108",
+    "polar-shared": "^2.1.108",
+    "polar-webapp-links": "^2.1.108"
   }
 }
