--- a/packages/polar-app-private/polar-hacker-news-crawler/package.json
+++ b/packages/polar-app-private/polar-hacker-news-crawler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-hacker-news-crawler",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "Provides support for calling our backend REST APIs in the polar cloud.",
   "main": "index.js",
   "private": true,
@@ -21,16 +21,16 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "@types/jsdom": "=16.12.13",
     "@types/node": "=14.14.35",
     "jsdom": "=16.7.0",
-    "polar-shared": "^2.1.107"
+    "polar-shared": "^2.1.108"
   }
 }
