--- a/packages/polar-app-private/polar-hooks/functions/package.json
+++ b/packages/polar-app-private/polar-hooks/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-hooks-functions",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "main": "index.js",
   "private": true,
   "license": "MIT",
@@ -47,26 +47,26 @@
     "js-sha3": "0.8.0",
     "mailgun.js": "=3.3.0",
     "node-fetch": "=2.6.1",
-    "polar-accounts": "^2.1.107",
-    "polar-answers": "^2.1.107",
-    "polar-answers-api": "^2.1.107",
-    "polar-backend-api": "^2.1.107",
-    "polar-backend-shared": "^2.1.107",
-    "polar-block-permissions": "^2.1.107",
-    "polar-firebase": "^2.1.107",
-    "polar-firebase-admin": "^2.1.107",
-    "polar-firestore-like": "^2.1.107",
-    "polar-html": "^2.1.107",
-    "polar-pdf": "^2.1.107",
-    "polar-react": "^2.1.107",
-    "polar-search": "^2.1.107",
-    "polar-search-api": "^2.1.107",
-    "polar-sentry-cloud-functions": "^2.1.107",
-    "polar-shared": "^2.1.107",
-    "polar-shared-webserver": "^2.1.107",
-    "polar-url": "^2.1.107",
-    "polar-webapp-dist": "^2.1.107",
-    "polar-webapp-links": "^2.1.107",
+    "polar-accounts": "^2.1.108",
+    "polar-answers": "^2.1.108",
+    "polar-answers-api": "^2.1.108",
+    "polar-backend-api": "^2.1.108",
+    "polar-backend-shared": "^2.1.108",
+    "polar-block-permissions": "^2.1.108",
+    "polar-firebase": "^2.1.108",
+    "polar-firebase-admin": "^2.1.108",
+    "polar-firestore-like": "^2.1.108",
+    "polar-html": "^2.1.108",
+    "polar-pdf": "^2.1.108",
+    "polar-react": "^2.1.108",
+    "polar-search": "^2.1.108",
+    "polar-search-api": "^2.1.108",
+    "polar-sentry-cloud-functions": "^2.1.108",
+    "polar-shared": "^2.1.108",
+    "polar-shared-webserver": "^2.1.108",
+    "polar-url": "^2.1.108",
+    "polar-webapp-dist": "^2.1.108",
+    "polar-webapp-links": "^2.1.108",
     "prerender-node": "^3.2.5",
     "prompts": "^2.3.2",
     "rollbar": "=2.19.4",
@@ -83,9 +83,9 @@
     "@types/stripe": "^6.30.3",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "^2.1.107",
-    "tslint": "6.1.2",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "polar-eslint": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
+    "tslint": "6.1.2"
   }
 }
