--- a/packages/polar-app-public/polar-backend-shared/package.json
+++ b/packages/polar-app-public/polar-backend-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-backend-shared",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -28,12 +28,12 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "polar-eslint": "^2.1.108",
+    "polar-typescript": "^2.1.108",
+    "typescript": "=4.2.3"
   },
   "dependencies": {
-    "polar-shared-webserver": "^2.1.107",
+    "polar-shared-webserver": "^2.1.108",
     "tsconfig": "^7.0.0"
   }
 }
