--- a/packages/polar-app-public/polar-background-uploader/package.json
+++ b/packages/polar-app-public/polar-background-uploader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-background-uploader",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "Provides an API for searching 3rd party APIs",
   "main": "index.js",
   "scripts": {
@@ -18,13 +18,13 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-test": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
-    "polar-shared": "^2.1.107"
+    "polar-shared": "^2.1.108"
   }
 }
