--- a/packages/polar-app-public/polar-desktop-app/package.json
+++ b/packages/polar-app-public/polar-desktop-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-desktop-app",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "Polar",
   "main": "./main-bundle.js",
   "private": true,
@@ -51,19 +51,19 @@
     "fork-ts-checker-webpack-plugin": "=6.2.0",
     "mocha": "=9.1.1",
     "null-loader": "=4.0.1",
+    "polar-eslint": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "source-map-support": "=0.5.19",
     "thread-loader": "=3.0.1",
     "ts-loader": "=8.0.18",
     "tslint": "6.1.2",
     "typescript": "=4.2.3",
     "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "webpack-cli": "=4.5.0"
   },
   "dependencies": {
-    "polar-bookshelf": "^2.1.107",
-    "polar-shared": "^2.1.107"
+    "polar-bookshelf": "^2.1.108",
+    "polar-shared": "^2.1.108"
   },
   "collective": {
     "type": "opencollective",
