--- a/packages/polar-app-public/polar-epub-generator/package.json
+++ b/packages/polar-app-public/polar-epub-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-epub-generator",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,14 +19,14 @@
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
     "mocha": "=9.1.1",
-    "polar-test": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "jszip": "=3.5.0",
-    "polar-shared": "^2.1.107"
+    "polar-shared": "^2.1.108"
   }
 }
