--- a/packages/polar-app-public/polar-file-saver/package.json
+++ b/packages/polar-app-public/polar-file-saver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-file-saver",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "n",
   "main": "index.js",
   "scripts": {
@@ -16,10 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/file-saver": "^2.0.1",
+    "polar-eslint": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "file-saver": "^2.0.2"
