--- a/packages/polar-app-public/polar-firestore-like/package.json
+++ b/packages/polar-app-public/polar-firestore-like/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-firestore-like",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "Firestore interfaces so that we can use both the client and admin SDK and mock the firestore interfaces.",
   "main": "index.js",
   "scripts": {
@@ -20,14 +20,14 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
-    "polar-shared": "^2.1.107"
+    "polar-shared": "^2.1.108"
   },
   "peerDependencies": {
     "firebase": "=8.8.1",
