--- a/packages/polar-app-public/polar-google-cloud-language/package.json
+++ b/packages/polar-app-public/polar-google-cloud-language/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-google-cloud-language",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,12 +20,12 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-shared": "^2.1.107",
-    "polar-test": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-shared": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "@google-cloud/language": "=4.2.5"
