--- a/packages/polar-app-public/polar-markdown/package.json
+++ b/packages/polar-app-public/polar-markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-markdown",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "Provides support for parsing and working with markdown",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -18,17 +18,17 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
+    "polar-eslint": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
     "@types/showdown": "^1.9.3",
     "gray-matter": "^4.0.2",
-    "polar-shared": "^2.1.107",
-    "polar-test": "^2.1.107",
+    "polar-shared": "^2.1.108",
+    "polar-test": "^2.1.108",
     "showdown": "^1.9.1"
   },
   "files": [
