--- a/packages/polar-app-public/polar-page-metadata-parser/package.json
+++ b/packages/polar-app-public/polar-page-metadata-parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-page-metadata-parser",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "Parses metadata for pages from the DOM",
   "main": "index.js",
   "scripts": {
@@ -21,15 +21,15 @@
     "chai": "4.2.0",
     "jsdom": "=16.7.0",
     "mocha": "=9.1.1",
+    "polar-eslint": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
-    "polar-shared": "^2.1.107",
-    "polar-test": "^2.1.107"
+    "polar-shared": "^2.1.108",
+    "polar-test": "^2.1.108"
   },
   "files": [
     "**/*.js",
