--- a/packages/polar-app-public/polar-pdf/package.json
+++ b/packages/polar-app-public/polar-pdf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-pdf",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "Provides support for parsing and working with PDFs.",
   "main": "index.js",
   "scripts": {
@@ -21,12 +21,12 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-karma": "^2.1.107",
-    "polar-webpack": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-karma": "^2.1.108",
+    "polar-typescript": "^2.1.108",
+    "polar-webpack": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
@@ -34,8 +34,8 @@
     "canvas": "=2.8.0",
     "jsdom": "=16.7.0",
     "pdfjs-dist": "=2.8.250-polar.3",
-    "polar-shared": "^2.1.107",
-    "polar-test": "^2.1.107"
+    "polar-shared": "^2.1.108",
+    "polar-test": "^2.1.108"
   },
   "files": [
     "**/*.js",
