--- a/packages/polar-app-public/polar-readability/package.json
+++ b/packages/polar-app-public/polar-readability/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-readability",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -18,12 +18,12 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-shared": "^2.1.107",
-    "polar-test": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-shared": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "readability": "0.2.0-polar.2"
