--- a/packages/polar-app-public/polar-shared-webserver/package.json
+++ b/packages/polar-app-public/polar-shared-webserver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-shared-webserver",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,16 +19,16 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-test": "^2.1.108",
+    "polar-typescript": "^2.1.108",
     "tslint": "6.1.2",
-    "typescript": "=4.2.3",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "typescript": "=4.2.3"
   },
   "dependencies": {
     "@types/express": "=4.17.1",
     "express": "=4.17.1",
-    "polar-shared": "^2.1.107"
+    "polar-shared": "^2.1.108"
   },
   "files": [
     "**/*.js",
