--- a/packages/polar-app-public/polar-web-extension/package.json
+++ b/packages/polar-app-public/polar-web-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-web-extension",
-  "version": "2.1.107",
+  "version": "2.1.108",
   "description": "https://github.com/yeoman/generator-chrome-extension",
   "scripts": {
     "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
@@ -21,15 +21,15 @@
     "@material-ui/core": "=4.11.3",
     "@material-ui/icons": "=4.11.2",
     "page-metadata-parser": "=1.1.4",
-    "polar-assets": "^2.1.107",
-    "polar-bookshelf": "^2.1.107",
-    "polar-content-capture": "^2.1.107",
-    "polar-epub-generator": "^2.1.107",
-    "polar-firebase-browser": "^2.1.107",
-    "polar-html": "^2.1.107",
-    "polar-react": "^2.1.107",
-    "polar-shared": "^2.1.107",
-    "polar-web-extension-api": "^2.1.107",
+    "polar-assets": "^2.1.108",
+    "polar-bookshelf": "^2.1.108",
+    "polar-content-capture": "^2.1.108",
+    "polar-epub-generator": "^2.1.108",
+    "polar-firebase-browser": "^2.1.108",
+    "polar-html": "^2.1.108",
+    "polar-react": "^2.1.108",
+    "polar-shared": "^2.1.108",
+    "polar-web-extension-api": "^2.1.108",
     "readability": "0.2.0-polar.2"
   },
   "devDependencies": {
@@ -37,20 +37,20 @@
     "@types/chrome": "0.0.114",
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
-    "@types/page-metadata-parser": "^2.1.107",
+    "@types/page-metadata-parser": "^2.1.108",
     "@types/react": "=16.9.53",
     "@types/react-dom": "=16.9.8",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-karma": "^2.1.107",
-    "polar-mocha": "^2.1.107",
-    "polar-webpack": "^2.1.107",
+    "polar-eslint": "^2.1.108",
+    "polar-karma": "^2.1.108",
+    "polar-mocha": "^2.1.108",
+    "polar-typescript": "^2.1.108",
+    "polar-webpack": "^2.1.108",
     "tslint": "6.1.2",
     "typescript": "=4.2.3",
     "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0",
-    "polar-eslint": "^2.1.107",
-    "polar-typescript": "^2.1.107"
+    "webpack-cli": "=4.5.0"
   },
   "files": [
     "package.json"
