--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "do-release-win": "cd packages/polar-bookshelf && ./scripts/dist-release.sh win",
     "do-release-linux": "cd packages/polar-bookshelf && ./scripts/dist-release.sh linux",
     "dist-release-publish": "yarn run dist-prepare && yarn run dist-build && yarn run dist-publish",
-    "dist-release-webapp": "yarn run set-registry-verdaccio && lerna bootstrap && lerna run compile && lerna run test && lerna run publish && (cd packages/polar-app-private/polar-webapp-dist && yarn run dist) && (cd packages/polar-app-private/polar-hooks && yarn run dist-release)",
-    "dist-release-webapp-init": "lerna bootstrap && lerna run compile && lerna run test && (cd packages/polar-app-private/polar-webapp-dist && yarn run dist)",
-    "dist-release-webapp-release": "(cd packages/polar-app-private/polar-hooks && yarn run dist-release)",
+    "dist-release-webapp": "yarn run set-registry-verdaccio && lerna bootstrap && lerna run compile && lerna run test && lerna run publish && (cd packages/polar-webapp-dist && yarn run dist) && (cd packages/polar-hooks && yarn run dist-release)",
+    "dist-release-webapp-init": "lerna bootstrap && lerna run compile && lerna run test && (cd packages/polar-webapp-dist && yarn run dist)",
+    "dist-release-webapp-release": "(cd packages/polar-hooks && yarn run dist-release)",
     "dist-release-linux": "yarn run do-release-init && yarn run do-release-linux",
     "dist-release-win": "yarn run do-release-init && yarn run do-release-win",
     "dist-release-macos": "yarn run do-release-init && yarn run do-release-macos",
@@ -67,7 +67,7 @@
     "find-package-versions": "lerna exec --concurrency=1 --parallel=false --no-private -- jq -r .dependencies package.json  |grep -Eo '^  [^,]+' | sort",
     "find-package-versions-conflicting": "yarn run find-package-versions | uniq | grep -Eo '^[^:]+' |uniq -c |sort |grep -Ev '^[ ]+1 '",
     "bootstrap-with-link": "lerna bootstrap --ci && find node_modules -type l -name 'polar*' -exec rm '{}' ';' && npx lerna link",
-    "update-modules": "lerna exec -- node $(pwd)/packages/polar-app-public/polar-create-module/src/CreateModule.js --update"
+    "update-modules": "lerna exec -- node $(pwd)/packages/polar-create-module/src/CreateModule.js --update"
   },
   "deprecated": {},
   "keywords": [],
