--- a/packages/polar-karma/package.json
+++ b/packages/polar-karma/package.json
@@ -20,5 +20,6 @@
     "karma-typescript-es6-transform": "=5.5.1",
     "karma-webpack": "=5.0.0",
     "puppeteer": "=9.1.1"
-  }
+  },
+  "devDependencies": {}
 }
