Commit of version 2.1.118 for release

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
-  "packages": [
-  ],
-  "version": "2.1.117",
+  "packages": [],
+  "version": "2.1.118",
   "concurrency": 10,
   "mutex": "network",
   "useWorkspaces": true,
