--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-bookshelf",
-  "version": "2.1.117",
+  "version": "2.1.118",
   "description": "Polar",
   "scripts": {
     "testit": "echo ./dist/polar-bookshelf_${npm_package_version}_amd64.snap",
@@ -95,8 +95,9 @@
     "mini-css-extract-plugin": "=0.9.0",
     "mocha": "=9.1.1",
     "node-sass": "=4.14.1",
-    "polar-typescript": "^2.1.117",
-    "polar-webpack": "^2.1.117",
+    "polar-eslint": "^2.1.117",
+    "polar-typescript": "^2.1.118",
+    "polar-webpack": "^2.1.118",
     "react-contenteditable": "=3.3.5",
     "recursive-readdir": "~2.2.2",
     "summernote-typescript": "~0.8.9",
@@ -107,8 +108,7 @@
     "wait-for-expect": "3.0.1",
     "webpack": "=5.26.3",
     "webpack-cli": "=4.5.0",
-    "workbox-cli": "=5.1.3",
-    "polar-eslint": "^2.1.117"
+    "workbox-cli": "=5.1.3"
   },
   "dependencies": {
     "@antv/g6": "^4.3.2",
@@ -159,40 +159,40 @@
     "moment": "^2.24.0",
     "path-to-regexp": "^3.0.0",
     "pdfjs-dist": "=2.8.250-polar.3",
-    "polar-accounts": "^2.1.117",
-    "polar-answers-api": "^2.1.117",
-    "polar-assets": "^2.1.117",
-    "polar-backend-api": "^2.1.117",
-    "polar-backend-shared": "^2.1.117",
-    "polar-blocks": "^2.1.117",
-    "polar-browsers": "^2.1.117",
-    "polar-content-capture": "^2.1.117",
-    "polar-dom-text-search": "^2.1.117",
-    "polar-epub": "^2.1.117",
-    "polar-eslint": "^2.1.117",
-    "polar-exporters": "^2.1.117",
-    "polar-file-saver": "^2.1.117",
-    "polar-firebase": "^2.1.117",
-    "polar-firebase-browser": "^2.1.117",
-    "polar-firebase-test": "^2.1.117",
-    "polar-firestore-like": "^2.1.117",
-    "polar-google-fonts": "^2.1.117",
-    "polar-html": "^2.1.117",
-    "polar-images": "^2.1.117",
-    "polar-karma": "^2.1.117",
-    "polar-markdown-parser": "^2.1.117",
-    "polar-pagemarks-auto": "^2.1.117",
-    "polar-pdf": "^2.1.117",
-    "polar-react": "^2.1.117",
-    "polar-release-metadata": "^2.1.117",
-    "polar-shared": "^2.1.117",
-    "polar-shared-webserver": "^2.1.117",
-    "polar-snapshot-cache": "^2.1.117",
-    "polar-spaced-repetition": "^2.1.117",
-    "polar-spaced-repetition-api": "^2.1.117",
-    "polar-text-highlighter": "^2.1.117",
-    "polar-web-extension-api": "^2.1.117",
-    "polar-webapp-links": "^2.1.117",
+    "polar-accounts": "^2.1.118",
+    "polar-answers-api": "^2.1.118",
+    "polar-assets": "^2.1.118",
+    "polar-backend-api": "^2.1.118",
+    "polar-backend-shared": "^2.1.118",
+    "polar-blocks": "^2.1.118",
+    "polar-browsers": "^2.1.118",
+    "polar-content-capture": "^2.1.118",
+    "polar-dom-text-search": "^2.1.118",
+    "polar-epub": "^2.1.118",
+    "polar-eslint": "^2.1.118",
+    "polar-exporters": "^2.1.118",
+    "polar-file-saver": "^2.1.118",
+    "polar-firebase": "^2.1.118",
+    "polar-firebase-browser": "^2.1.118",
+    "polar-firebase-test": "^2.1.118",
+    "polar-firestore-like": "^2.1.118",
+    "polar-google-fonts": "^2.1.118",
+    "polar-html": "^2.1.118",
+    "polar-images": "^2.1.118",
+    "polar-karma": "^2.1.118",
+    "polar-markdown-parser": "^2.1.118",
+    "polar-pagemarks-auto": "^2.1.118",
+    "polar-pdf": "^2.1.118",
+    "polar-react": "^2.1.118",
+    "polar-release-metadata": "^2.1.118",
+    "polar-shared": "^2.1.118",
+    "polar-shared-webserver": "^2.1.118",
+    "polar-snapshot-cache": "^2.1.118",
+    "polar-spaced-repetition": "^2.1.118",
+    "polar-spaced-repetition-api": "^2.1.118",
+    "polar-text-highlighter": "^2.1.118",
+    "polar-web-extension-api": "^2.1.118",
+    "polar-webapp-links": "^2.1.118",
     "prop-types": "~15.7.2",
     "react-async": "=10.0.1",
     "react-container-dimensions": "=1.4.1",
