--- a/packages/polar-google-fonts/package.json
+++ b/packages/polar-google-fonts/package.json
@@ -1,10 +1,9 @@
 {
   "name": "polar-google-fonts",
-  "version": "2.1.117",
+  "version": "2.1.118",
   "description": "",
   "main": "index.js",
   "scripts": {},
   "author": "",
-  "license": "ISC",
-  "devDependencies": {}
+  "license": "ISC"
 }
