--- a/packages/polar-accounts/package.json
+++ b/packages/polar-accounts/package.json
@@ -23,8 +23,6 @@
     "polar-eslint": "^2.1.124",
     "polar-shared": "^2.1.124",
     "polar-test": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   }
 }
