--- a/packages/polar-admin/package.json
+++ b/packages/polar-admin/package.json
@@ -18,8 +18,7 @@
   "devDependencies": {
     "firebase-tools": "=9.16.0",
     "polar-eslint": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "@google-cloud/firestore": "=4.13.2",
