--- a/packages/polar-answers/package.json
+++ b/packages/polar-answers/package.json
@@ -22,9 +22,7 @@
     "polar-eslint": "^2.1.124",
     "polar-firebase-admin": "^2.1.124",
     "polar-test": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "@google-cloud/language": "=4.2.5",
