--- a/packages/polar-block-permissions/package.json
+++ b/packages/polar-block-permissions/package.json
@@ -26,9 +26,7 @@
     "polar-firebase-browser": "^2.1.124",
     "polar-firebase-test": "^2.1.124",
     "polar-test": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "polar-blocks": "^2.1.124",
