--- a/packages/polar-browsers/package.json
+++ b/packages/polar-browsers/package.json
@@ -20,9 +20,7 @@
     "mocha": "=9.1.1",
     "polar-eslint": "^2.1.124",
     "polar-test": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "@types/ua-parser-js": "0.7.33",
