--- a/packages/polar-file-saver/package.json
+++ b/packages/polar-file-saver/package.json
@@ -17,9 +17,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.1",
     "polar-eslint": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "file-saver": "^2.0.2"
