--- a/packages/polar-lang-classifier/package.json
+++ b/packages/polar-lang-classifier/package.json
@@ -20,9 +20,7 @@
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-eslint": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "node-nlp": "=4.22.1"
