--- a/packages/polar-mobile-app/package.json
+++ b/packages/polar-mobile-app/package.json
@@ -37,8 +37,7 @@
     "metro-react-native-babel-preset": "^0.64.0",
     "polar-eslint": "^2.1.81",
     "polar-typescript": "^2.1.81",
-    "react-test-renderer": "17.0.1",
-    "typescript": "=4.2.3"
+    "react-test-renderer": "17.0.1"
   },
   "resolutions": {
     "@types/react": "^17"
