--- a/packages/polar-npm/package.json
+++ b/packages/polar-npm/package.json
@@ -23,9 +23,7 @@
     "@types/node": "=14.14.35",
     "@types/pdfjs-dist": "2.1.71-polar.2",
     "polar-eslint": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "polar-shared": "^2.1.124"
