--- a/packages/polar-pdf/package.json
+++ b/packages/polar-pdf/package.json
@@ -24,9 +24,7 @@
     "polar-eslint": "^2.1.124",
     "polar-karma": "^2.1.124",
     "polar-typescript": "^2.1.124",
-    "polar-webpack": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-webpack": "^2.1.124"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
