--- a/packages/polar-react-svg-icons/package.json
+++ b/packages/polar-react-svg-icons/package.json
@@ -22,9 +22,7 @@
   "homepage": "https://github.com/burtonator/polar-app-public",
   "devDependencies": {
     "polar-eslint": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "polar-react": "^2.1.124"
