--- a/packages/polar-shared-webserver/package.json
+++ b/packages/polar-shared-webserver/package.json
@@ -21,9 +21,7 @@
     "mocha": "=9.1.1",
     "polar-eslint": "^2.1.124",
     "polar-test": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "@types/express": "=4.17.1",
