--- a/packages/polar-snapshot-cache/package.json
+++ b/packages/polar-snapshot-cache/package.json
@@ -23,9 +23,7 @@
     "polar-eslint": "^2.1.124",
     "polar-karma": "^2.1.124",
     "polar-test": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "idb-keyval": "=5.0.4",
