--- a/packages/polar-text-highlighter/package.json
+++ b/packages/polar-text-highlighter/package.json
@@ -23,9 +23,7 @@
     "jsdom-global": "3.0.2",
     "mocha": "=9.1.1",
     "polar-eslint": "^2.1.124",
-    "polar-typescript": "^2.1.124",
-    "tslint": "6.1.2",
-    "typescript": "=4.2.3"
+    "polar-typescript": "^2.1.124"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
