--- a/packages/polar-eslint/package.json
+++ b/packages/polar-eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-eslint",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "eslint support",
   "scripts": {},
   "keywords": [],
