--- a/packages/polar-typescript/package.json
+++ b/packages/polar-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-typescript",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Typescript support and all dependent packages",
   "scripts": {},
   "keywords": [],
