--- a/packages/polar-accounts/package.json
+++ b/packages/polar-accounts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-accounts",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,9 +20,9 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-shared": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-shared": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   }
 }
