--- a/packages/polar-backend-api/package.json
+++ b/packages/polar-backend-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-backend-api",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Provides request/response APIs and types used between the frontend and backend.",
   "main": "index.js",
   "scripts": {
@@ -20,9 +20,9 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "files": [
     "**/*.js",
