--- a/packages/polar-background-uploader/package.json
+++ b/packages/polar-background-uploader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-background-uploader",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Provides an API for searching 3rd party APIs",
   "main": "index.js",
   "scripts": {
@@ -18,11 +18,11 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
-    "polar-shared": "^2.1.126"
+    "polar-shared": "polar.latest"
   }
 }
