--- a/packages/polar-block-permissions/package.json
+++ b/packages/polar-block-permissions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-block-permissions",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Code to connect to firebase as an admin user",
   "main": "index.js",
   "scripts": {
@@ -21,17 +21,17 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-firebase-admin": "^2.1.126",
-    "polar-firebase-browser": "^2.1.126",
-    "polar-firebase-test": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-firebase-admin": "polar.latest",
+    "polar-firebase-browser": "polar.latest",
+    "polar-firebase-test": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
-    "polar-blocks": "^2.1.126",
-    "polar-firebase": "^2.1.126",
-    "polar-firestore-like": "^2.1.126",
-    "polar-shared": "^2.1.126"
+    "polar-blocks": "polar.latest",
+    "polar-firebase": "polar.latest",
+    "polar-firestore-like": "polar.latest",
+    "polar-shared": "polar.latest"
   }
 }
