--- a/packages/polar-browsers/package.json
+++ b/packages/polar-browsers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-browsers",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Determine which browser is being used.",
   "main": "index.js",
   "scripts": {
@@ -18,9 +18,9 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "@types/ua-parser-js": "0.7.33",
