--- a/packages/polar-epub-generator/package.json
+++ b/packages/polar-epub-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-epub-generator",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,12 +19,12 @@
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "jszip": "=3.5.0",
-    "polar-shared": "^2.1.126"
+    "polar-shared": "polar.latest"
   }
 }
