--- a/packages/polar-epub/package.json
+++ b/packages/polar-epub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-epub",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "EPUB support in Polar.",
   "main": "index.js",
   "scripts": {
@@ -18,14 +18,14 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "epubjs": "=0.3.89-polar.16",
     "fast-xml-parser": "^3.19.0",
     "node-stream-zip": "^1.14.0",
-    "polar-shared": "^2.1.126"
+    "polar-shared": "polar.latest"
   }
 }
