--- a/packages/polar-firebase-admin/package.json
+++ b/packages/polar-firebase-admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-firebase-admin",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Code to connect to firebase as an admin user",
   "main": "index.js",
   "scripts": {
@@ -21,15 +21,15 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "@google-cloud/storage": "=5.8.5",
     "firebase-admin": "=9.11.0",
-    "polar-firebase": "^2.1.126",
-    "polar-firestore-like": "^2.1.126",
-    "polar-shared": "^2.1.126"
+    "polar-firebase": "polar.latest",
+    "polar-firestore-like": "polar.latest",
+    "polar-shared": "polar.latest"
   }
 }
