--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-hooks-functions",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "main": "index.js",
   "private": true,
   "license": "MIT",
@@ -46,27 +46,27 @@
     "js-sha3": "0.8.0",
     "mailgun.js": "=3.3.0",
     "node-fetch": "=2.6.1",
-    "polar-accounts": "^2.1.126",
-    "polar-answers": "^2.1.126",
-    "polar-answers-api": "^2.1.126",
-    "polar-backend-api": "^2.1.126",
-    "polar-backend-shared": "^2.1.126",
-    "polar-block-permissions": "^2.1.126",
-    "polar-firebase": "^2.1.126",
-    "polar-firebase-admin": "^2.1.126",
-    "polar-firestore-like": "^2.1.126",
-    "polar-html": "^2.1.126",
-    "polar-pdf": "^2.1.126",
-    "polar-react": "^2.1.126",
-    "polar-search": "^2.1.126",
-    "polar-search-api": "^2.1.126",
-    "polar-sentry-cloud-functions": "^2.1.126",
-    "polar-shared": "^2.1.126",
-    "polar-shared-webserver": "^2.1.126",
-    "polar-typescript": "^2.1.126",
-    "polar-url": "^2.1.126",
-    "polar-webapp-dist": "^2.1.126",
-    "polar-webapp-links": "^2.1.126",
+    "polar-accounts": "polar.latest",
+    "polar-answers": "polar.latest",
+    "polar-answers-api": "polar.latest",
+    "polar-backend-api": "polar.latest",
+    "polar-backend-shared": "polar.latest",
+    "polar-block-permissions": "polar.latest",
+    "polar-firebase": "polar.latest",
+    "polar-firebase-admin": "polar.latest",
+    "polar-firestore-like": "polar.latest",
+    "polar-html": "polar.latest",
+    "polar-pdf": "polar.latest",
+    "polar-react": "polar.latest",
+    "polar-search": "polar.latest",
+    "polar-search-api": "polar.latest",
+    "polar-sentry-cloud-functions": "polar.latest",
+    "polar-shared": "polar.latest",
+    "polar-shared-webserver": "polar.latest",
+    "polar-typescript": "polar.latest",
+    "polar-url": "polar.latest",
+    "polar-webapp-dist": "polar.latest",
+    "polar-webapp-links": "polar.latest",
     "prerender-node": "^3.2.5",
     "prompts": "^2.3.2",
     "rollbar": "=2.19.4",
@@ -82,8 +82,8 @@
     "@types/stripe": "^6.30.3",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   }
 }
