--- a/packages/polar-lang-classifier/package.json
+++ b/packages/polar-lang-classifier/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-lang-classifier",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,8 +19,8 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "node-nlp": "=4.22.1"
