--- a/packages/polar-markdown/package.json
+++ b/packages/polar-markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-markdown",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Provides support for parsing and working with markdown",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -18,15 +18,15 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
     "@types/showdown": "^1.9.3",
     "gray-matter": "^4.0.2",
-    "polar-shared": "^2.1.126",
-    "polar-test": "^2.1.126",
+    "polar-shared": "polar.latest",
+    "polar-test": "polar.latest",
     "showdown": "^1.9.1"
   },
   "files": [
