--- a/packages/polar-npm/package.json
+++ b/packages/polar-npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-npm",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Basic internal NPM commands which extend NPM functionality",
   "main": "index.js",
   "scripts": {
@@ -22,11 +22,11 @@
   "devDependencies": {
     "@types/node": "=14.14.35",
     "@types/pdfjs-dist": "2.1.71-polar.2",
-    "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
-    "polar-shared": "^2.1.126"
+    "polar-shared": "polar.latest"
   },
   "files": [
     "**/*.js",
