--- a/packages/polar-page-metadata-parser/package.json
+++ b/packages/polar-page-metadata-parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-page-metadata-parser",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Parses metadata for pages from the DOM",
   "main": "index.js",
   "scripts": {
@@ -21,13 +21,13 @@
     "chai": "4.2.0",
     "jsdom": "=16.7.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
-    "polar-shared": "^2.1.126",
-    "polar-test": "^2.1.126"
+    "polar-shared": "polar.latest",
+    "polar-test": "polar.latest"
   },
   "files": [
     "**/*.js",
