--- a/packages/polar-pagemarks-auto/package.json
+++ b/packages/polar-pagemarks-auto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-pagemarks-auto",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Computes pagemarks within a parent while it scrolls.",
   "main": "index.js",
   "scripts": {
@@ -19,13 +19,13 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
-    "polar-shared": "^2.1.126",
-    "polar-test": "^2.1.126"
+    "polar-shared": "polar.latest",
+    "polar-test": "polar.latest"
   },
   "files": [
     "**/*.js",
