--- a/packages/polar-pdf/package.json
+++ b/packages/polar-pdf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-pdf",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Provides support for parsing and working with PDFs.",
   "main": "index.js",
   "scripts": {
@@ -21,10 +21,10 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-karma": "^2.1.126",
-    "polar-typescript": "^2.1.126",
-    "polar-webpack": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-karma": "polar.latest",
+    "polar-typescript": "polar.latest",
+    "polar-webpack": "polar.latest"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
@@ -32,8 +32,8 @@
     "canvas": "=2.8.0",
     "jsdom": "=16.7.0",
     "pdfjs-dist": "=2.8.250-polar.3",
-    "polar-shared": "^2.1.126",
-    "polar-test": "^2.1.126"
+    "polar-shared": "polar.latest",
+    "polar-test": "polar.latest"
   },
   "files": [
     "**/*.js",
