--- a/packages/polar-react/package.json
+++ b/packages/polar-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-react",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Basic React dependencies and utilities.",
   "scripts": {},
   "keywords": [],
