--- a/packages/polar-search-api-client/package.json
+++ b/packages/polar-search-api-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-search-api-client",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Provides support for calling our backend REST APIs in the polar cloud.",
   "main": "index.js",
   "scripts": {
@@ -19,14 +19,14 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
-    "polar-search": "^2.1.126",
-    "polar-search-api": "^2.1.126",
-    "polar-shared": "^2.1.126"
+    "polar-search": "polar.latest",
+    "polar-search-api": "polar.latest",
+    "polar-shared": "polar.latest"
   },
   "files": [
     "**/*.js",
