--- a/packages/polar-search-api/package.json
+++ b/packages/polar-search-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-search-api",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Provides just the basic API that we can use in both the frontend and backend for API requests and responses.",
   "main": "index.js",
   "scripts": {
@@ -20,12 +20,12 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
-    "polar-shared": "^2.1.126"
+    "polar-shared": "polar.latest"
   },
   "files": [
     "**/*.js",
