--- a/packages/polar-search/package.json
+++ b/packages/polar-search/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-search",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "Provides an API for searching 3rd party APIs",
   "main": "index.js",
   "scripts": {
@@ -17,14 +17,14 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "@types/xmldom": "^0.1.29",
-    "polar-search-api": "^2.1.126",
-    "polar-shared": "^2.1.126",
+    "polar-search-api": "polar.latest",
+    "polar-shared": "polar.latest",
     "xmldom": "^0.1.27"
   }
 }
