--- a/packages/polar-snapshot-cache/package.json
+++ b/packages/polar-snapshot-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-snapshot-cache",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,15 +20,15 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-karma": "^2.1.126",
-    "polar-test": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-eslint": "polar.latest",
+    "polar-karma": "polar.latest",
+    "polar-test": "polar.latest",
+    "polar-typescript": "polar.latest"
   },
   "dependencies": {
     "idb-keyval": "=5.0.4",
-    "polar-firestore-like": "^2.1.126",
-    "polar-shared": "^2.1.126"
+    "polar-firestore-like": "polar.latest",
+    "polar-shared": "polar.latest"
   },
   "files": [
     "**/*.js",
