--- a/packages/polar-web-extension/package.json
+++ b/packages/polar-web-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-web-extension",
-  "version": "2.1.126",
+  "version": "polar.latest",
   "description": "https://github.com/yeoman/generator-chrome-extension",
   "scripts": {
     "_test": "mocha --timeout 20000 --exit 'src/**/*Test.js'",
@@ -21,15 +21,15 @@
     "@material-ui/core": "=4.11.3",
     "@material-ui/icons": "=4.11.2",
     "page-metadata-parser": "=1.1.4",
-    "polar-assets": "^2.1.126",
-    "polar-bookshelf": "^2.1.126",
-    "polar-content-capture": "^2.1.126",
-    "polar-epub-generator": "^2.1.126",
-    "polar-firebase-browser": "^2.1.126",
-    "polar-html": "^2.1.126",
-    "polar-react": "^2.1.126",
-    "polar-shared": "^2.1.126",
-    "polar-web-extension-api": "^2.1.126",
+    "polar-assets": "polar.latest",
+    "polar-bookshelf": "polar.latest",
+    "polar-content-capture": "polar.latest",
+    "polar-epub-generator": "polar.latest",
+    "polar-firebase-browser": "polar.latest",
+    "polar-html": "polar.latest",
+    "polar-react": "polar.latest",
+    "polar-shared": "polar.latest",
+    "polar-web-extension-api": "polar.latest",
     "readability": "0.2.0-polar.2"
   },
   "devDependencies": {
@@ -37,16 +37,16 @@
     "@types/chrome": "0.0.114",
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
-    "@types/page-metadata-parser": "^2.1.126",
+    "@types/page-metadata-parser": "polar.latest",
     "@types/react": "=16.9.53",
     "@types/react-dom": "=16.9.8",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "^2.1.126",
-    "polar-karma": "^2.1.126",
-    "polar-mocha": "^2.1.126",
-    "polar-typescript": "^2.1.126",
-    "polar-webpack": "^2.1.126",
+    "polar-eslint": "polar.latest",
+    "polar-karma": "polar.latest",
+    "polar-mocha": "polar.latest",
+    "polar-typescript": "polar.latest",
+    "polar-webpack": "polar.latest",
     "webpack": "=5.26.3",
     "webpack-cli": "=4.5.0"
   },
