--- a/packages/polar-google-fonts/package.json
+++ b/packages/polar-google-fonts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-google-fonts",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "main": "index.js",
   "scripts": {},
