--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "packages": [],
-  "version": "polar.latest",
+  "version": "90.135.0",
   "concurrency": 10,
   "mutex": "network",
   "useWorkspaces": true,
