--- a/packages/polar-admin/package.json
+++ b/packages/polar-admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-admin",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "main": "index.js",
   "private": true,
@@ -17,13 +17,13 @@
   "license": "ISC",
   "devDependencies": {
     "firebase-tools": "=9.16.0",
-    "polar-eslint": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "@google-cloud/firestore": "=4.13.2",
     "firebase-admin": "=9.11.0",
-    "polar-firebase": "polar.latest",
-    "polar-shared": "polar.latest"
+    "polar-firebase": "90.135.0",
+    "polar-shared": "90.135.0"
   }
 }
