--- a/packages/polar-answers-api/package.json
+++ b/packages/polar-answers-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-answers-api",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -19,11 +19,11 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
-    "polar-shared": "polar.latest"
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
