--- a/packages/polar-answers/package.json
+++ b/packages/polar-answers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-answers",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -19,19 +19,19 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-firebase-admin": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-firebase-admin": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "@google-cloud/language": "=4.2.5",
-    "polar-answers-api": "polar.latest",
-    "polar-blocks": "polar.latest",
-    "polar-firebase": "polar.latest",
-    "polar-google-cloud-language": "polar.latest",
-    "polar-pdf": "polar.latest",
-    "polar-shared": "polar.latest"
+    "polar-answers-api": "90.135.0",
+    "polar-blocks": "90.135.0",
+    "polar-firebase": "90.135.0",
+    "polar-google-cloud-language": "90.135.0",
+    "polar-pdf": "90.135.0",
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
