--- a/packages/polar-app-types-page-metadata-parser/package.json
+++ b/packages/polar-app-types-page-metadata-parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@types/page-metadata-parser",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "main": "index.js",
   "scripts": {},
