--- a/packages/polar-assets-basic-flat-icons/package.json
+++ b/packages/polar-assets-basic-flat-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-assets-basic-flat-icons",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "scripts": {
     "dist": "echo noop"
