--- a/packages/polar-blocks/package.json
+++ b/packages/polar-blocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-blocks",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Blocks infra and main interfaces that can be used on the frontend and backend.",
   "main": "index.js",
   "scripts": {
@@ -18,11 +18,11 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
-    "polar-shared": "polar.latest"
+    "polar-shared": "90.135.0"
   }
 }
