--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-bookshelf",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Polar",
   "scripts": {
     "testit": "echo ./dist/polar-bookshelf_${npm_package_version}_amd64.snap",
@@ -94,8 +94,8 @@
     "mini-css-extract-plugin": "=0.9.0",
     "mocha": "=9.1.1",
     "node-sass": "=4.14.1",
-    "polar-typescript": "polar.latest",
-    "polar-webpack": "polar.latest",
+    "polar-typescript": "90.135.0",
+    "polar-webpack": "90.135.0",
     "react-contenteditable": "=3.3.5",
     "recursive-readdir": "~2.2.2",
     "summernote-typescript": "~0.8.9",
@@ -155,40 +155,40 @@
     "moment": "^2.24.0",
     "path-to-regexp": "^3.0.0",
     "pdfjs-dist": "=2.8.250-polar.3",
-    "polar-accounts": "polar.latest",
-    "polar-answers-api": "polar.latest",
-    "polar-assets": "polar.latest",
-    "polar-backend-api": "polar.latest",
-    "polar-backend-shared": "polar.latest",
-    "polar-blocks": "polar.latest",
-    "polar-browsers": "polar.latest",
-    "polar-content-capture": "polar.latest",
-    "polar-dom-text-search": "polar.latest",
-    "polar-epub": "polar.latest",
-    "polar-eslint": "polar.latest",
-    "polar-exporters": "polar.latest",
-    "polar-file-saver": "polar.latest",
-    "polar-firebase": "polar.latest",
-    "polar-firebase-browser": "polar.latest",
-    "polar-firebase-test": "polar.latest",
-    "polar-firestore-like": "polar.latest",
-    "polar-google-fonts": "polar.latest",
-    "polar-html": "polar.latest",
-    "polar-images": "polar.latest",
-    "polar-karma": "polar.latest",
-    "polar-markdown-parser": "polar.latest",
-    "polar-pagemarks-auto": "polar.latest",
-    "polar-pdf": "polar.latest",
-    "polar-react": "polar.latest",
-    "polar-release-metadata": "polar.latest",
-    "polar-shared": "polar.latest",
-    "polar-shared-webserver": "polar.latest",
-    "polar-snapshot-cache": "polar.latest",
-    "polar-spaced-repetition": "polar.latest",
-    "polar-spaced-repetition-api": "polar.latest",
-    "polar-text-highlighter": "polar.latest",
-    "polar-web-extension-api": "polar.latest",
-    "polar-webapp-links": "polar.latest",
+    "polar-accounts": "90.135.0",
+    "polar-answers-api": "90.135.0",
+    "polar-assets": "90.135.0",
+    "polar-backend-api": "90.135.0",
+    "polar-backend-shared": "90.135.0",
+    "polar-blocks": "90.135.0",
+    "polar-browsers": "90.135.0",
+    "polar-content-capture": "90.135.0",
+    "polar-dom-text-search": "90.135.0",
+    "polar-epub": "90.135.0",
+    "polar-eslint": "90.135.0",
+    "polar-exporters": "90.135.0",
+    "polar-file-saver": "90.135.0",
+    "polar-firebase": "90.135.0",
+    "polar-firebase-browser": "90.135.0",
+    "polar-firebase-test": "90.135.0",
+    "polar-firestore-like": "90.135.0",
+    "polar-google-fonts": "90.135.0",
+    "polar-html": "90.135.0",
+    "polar-images": "90.135.0",
+    "polar-karma": "90.135.0",
+    "polar-markdown-parser": "90.135.0",
+    "polar-pagemarks-auto": "90.135.0",
+    "polar-pdf": "90.135.0",
+    "polar-react": "90.135.0",
+    "polar-release-metadata": "90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-shared-webserver": "90.135.0",
+    "polar-snapshot-cache": "90.135.0",
+    "polar-spaced-repetition": "90.135.0",
+    "polar-spaced-repetition-api": "90.135.0",
+    "polar-text-highlighter": "90.135.0",
+    "polar-web-extension-api": "90.135.0",
+    "polar-webapp-links": "90.135.0",
     "prop-types": "~15.7.2",
     "react-async": "=10.0.1",
     "react-container-dimensions": "=1.4.1",
