--- a/packages/polar-content-capture/package.json
+++ b/packages/polar-content-capture/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-content-capture",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Basic code to dump the browser DOM to a JSON object that we can use within Polar",
   "main": "index.js",
   "scripts": {
@@ -21,15 +21,15 @@
     "chai": "4.2.0",
     "jsdom": "=16.7.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-mocha": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest",
+    "polar-eslint": "90.135.0",
+    "polar-mocha": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
     "wait-for-expect": "3.0.1"
   },
   "dependencies": {
     "jszip": "=3.5.0",
-    "polar-shared": "polar.latest"
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
