--- a/packages/polar-doc-preview-loader/package.json
+++ b/packages/polar-doc-preview-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-doc-preview-loader",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Loads up doc preview URLs into be queued for processing",
   "main": "index.js",
   "scripts": {
@@ -22,16 +22,16 @@
     "@types/node": "=14.14.35",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "@google-cloud/tasks": "=1.9.0",
     "firebase-admin": "=9.11.0",
-    "polar-firebase": "polar.latest",
-    "polar-firebase-admin": "polar.latest",
-    "polar-shared": "polar.latest",
-    "polar-webapp-links": "polar.latest"
+    "polar-firebase": "90.135.0",
+    "polar-firebase-admin": "90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-webapp-links": "90.135.0"
   }
 }
