--- a/packages/polar-epub-generator/package.json
+++ b/packages/polar-epub-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-epub-generator",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,12 +19,12 @@
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.14.35",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "jszip": "=3.5.0",
-    "polar-shared": "polar.latest"
+    "polar-shared": "90.135.0"
   }
 }
