--- a/packages/polar-firebase-browser/package.json
+++ b/packages/polar-firebase-browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-firebase-browser",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Code to connect to firebase as an admin user",
   "main": "index.js",
   "scripts": {
@@ -20,15 +20,15 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "firebase": "=8.8.1",
-    "polar-firebase-test": "polar.latest",
-    "polar-firestore-like": "polar.latest",
-    "polar-shared": "polar.latest",
-    "polar-snapshot-cache": "polar.latest"
+    "polar-firebase-test": "90.135.0",
+    "polar-firestore-like": "90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-snapshot-cache": "90.135.0"
   }
 }
