--- a/packages/polar-hacker-news-crawler/package.json
+++ b/packages/polar-hacker-news-crawler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-hacker-news-crawler",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Provides support for calling our backend REST APIs in the polar cloud.",
   "main": "index.js",
   "private": true,
@@ -21,14 +21,14 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "@types/jsdom": "=16.12.13",
     "@types/node": "=14.14.35",
     "jsdom": "=16.7.0",
-    "polar-shared": "polar.latest"
+    "polar-shared": "90.135.0"
   }
 }
