--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-hooks-functions",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "main": "index.js",
   "private": true,
   "license": "MIT",
@@ -46,27 +46,27 @@
     "js-sha3": "0.8.0",
     "mailgun.js": "=3.3.0",
     "node-fetch": "=2.6.1",
-    "polar-accounts": "polar.latest",
-    "polar-answers": "polar.latest",
-    "polar-answers-api": "polar.latest",
-    "polar-backend-api": "polar.latest",
-    "polar-backend-shared": "polar.latest",
-    "polar-block-permissions": "polar.latest",
-    "polar-firebase": "polar.latest",
-    "polar-firebase-admin": "polar.latest",
-    "polar-firestore-like": "polar.latest",
-    "polar-html": "polar.latest",
-    "polar-pdf": "polar.latest",
-    "polar-react": "polar.latest",
-    "polar-search": "polar.latest",
-    "polar-search-api": "polar.latest",
-    "polar-sentry-cloud-functions": "polar.latest",
-    "polar-shared": "polar.latest",
-    "polar-shared-webserver": "polar.latest",
-    "polar-typescript": "polar.latest",
-    "polar-url": "polar.latest",
-    "polar-webapp-dist": "polar.latest",
-    "polar-webapp-links": "polar.latest",
+    "polar-accounts": "90.135.0",
+    "polar-answers": "90.135.0",
+    "polar-answers-api": "90.135.0",
+    "polar-backend-api": "90.135.0",
+    "polar-backend-shared": "90.135.0",
+    "polar-block-permissions": "90.135.0",
+    "polar-firebase": "90.135.0",
+    "polar-firebase-admin": "90.135.0",
+    "polar-firestore-like": "90.135.0",
+    "polar-html": "90.135.0",
+    "polar-pdf": "90.135.0",
+    "polar-react": "90.135.0",
+    "polar-search": "90.135.0",
+    "polar-search-api": "90.135.0",
+    "polar-sentry-cloud-functions": "90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-shared-webserver": "90.135.0",
+    "polar-typescript": "90.135.0",
+    "polar-url": "90.135.0",
+    "polar-webapp-dist": "90.135.0",
+    "polar-webapp-links": "90.135.0",
     "prerender-node": "^3.2.5",
     "prompts": "^2.3.2",
     "rollbar": "=2.19.4",
@@ -82,8 +82,8 @@
     "@types/stripe": "^6.30.3",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   }
 }
