--- a/packages/polar-images/package.json
+++ b/packages/polar-images/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-images",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,8 +23,8 @@
     "chai": "4.2.0",
     "exif-js": "=2.3.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   }
 }
