--- a/packages/polar-react-svg-icons/package.json
+++ b/packages/polar-react-svg-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-react-svg-icons",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -21,11 +21,11 @@
   },
   "homepage": "https://github.com/burtonator/polar-app-public",
   "devDependencies": {
-    "polar-eslint": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
-    "polar-react": "polar.latest"
+    "polar-react": "90.135.0"
   },
   "files": [
     "**/*.js",
