--- a/packages/polar-release-metadata/package.json
+++ b/packages/polar-release-metadata/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-release-metadata",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Provides support for parsing and working with markdown",
   "main": "index.js",
   "scripts": {
@@ -24,15 +24,15 @@
     "@types/semver": "~6.2.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
     "@types/showdown": "^1.9.3",
-    "polar-markdown": "polar.latest",
-    "polar-shared": "polar.latest",
-    "polar-test": "polar.latest",
+    "polar-markdown": "90.135.0",
+    "polar-shared": "90.135.0",
+    "polar-test": "90.135.0",
     "semver": "~6.3.0"
   },
   "files": [
