--- a/packages/polar-sentry-cloud-functions/package.json
+++ b/packages/polar-sentry-cloud-functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-sentry-cloud-functions",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Wrapper code for wrapping cloud functions witih sentry.",
   "main": "index.js",
   "scripts": {
@@ -21,9 +21,9 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "=1.7.1",
