--- a/packages/polar-shared-webserver/package.json
+++ b/packages/polar-shared-webserver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-shared-webserver",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,14 +19,14 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "@types/express": "=4.17.1",
     "express": "=4.17.1",
-    "polar-shared": "polar.latest"
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
