--- a/packages/polar-shared/package.json
+++ b/packages/polar-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-shared",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -32,9 +32,9 @@
     "@types/uuid": "3.4.5",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest",
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0",
     "wait-for-expect": "3.0.1"
   },
   "dependencies": {
