--- a/packages/polar-site2/package.json
+++ b/packages/polar-site2/package.json
@@ -1,7 +1,7 @@
 {
   "name": "polar",
   "description": "General information, support, and downloads for the polar app",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "author": "Will Kendall / Jonathan Graeupner / Myles <wpk235@gmail.com>",
   "private": true,
   "scripts": {
@@ -44,8 +44,8 @@
     "ink": "=3.0.8",
     "ink-box": "=1.0.0",
     "pngquant-bin": "=6.0.0",
-    "polar-bookshelf": "polar.latest",
-    "polar-shared": "polar.latest",
+    "polar-bookshelf": "90.135.0",
+    "polar-shared": "90.135.0",
     "react": "=16.14.0",
     "react-dom": "=16.14.0",
     "react-helmet": "=6.1.0",
