--- a/packages/polar-text-highlighter/package.json
+++ b/packages/polar-text-highlighter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-text-highlighter",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Provides a way to highlight text reliably/portably",
   "scripts": {
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else yarn run mocha; fi;",
@@ -22,13 +22,13 @@
     "jsdom": "=16.7.0",
     "jsdom-global": "3.0.2",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
-    "polar-shared": "polar.latest",
-    "polar-test": "polar.latest"
+    "polar-shared": "90.135.0",
+    "polar-test": "90.135.0"
   },
   "files": [
     "**/*.js",
