--- a/packages/polar-web-extension-api/package.json
+++ b/packages/polar-web-extension-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-web-extension-api",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "Provides just the basic API that we can use in both the frontend and backend for API requests and responses.",
   "main": "index.js",
   "scripts": {
@@ -26,8 +26,8 @@
     "karma-cli": "^2.0.0",
     "karma-mocha": "=2.0.1",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-typescript": "polar.latest",
+    "polar-eslint": "90.135.0",
+    "polar-typescript": "90.135.0",
     "ts-loader": "=8.0.18",
     "webpack": "=5.26.3",
     "webpack-cli": "=4.5.0"
@@ -35,7 +35,7 @@
   "dependencies": {
     "@types/karma": "^5.0.1",
     "@types/node": "=14.14.35",
-    "polar-shared": "polar.latest"
+    "polar-shared": "90.135.0"
   },
   "files": [
     "**/*.js",
