--- a/packages/polar-webapp-links/package.json
+++ b/packages/polar-webapp-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polar-webapp-links",
-  "version": "polar.latest",
+  "version": "90.135.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,13 +20,13 @@
     "@types/node": "=14.14.35",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-eslint": "polar.latest",
-    "polar-test": "polar.latest",
-    "polar-typescript": "polar.latest"
+    "polar-eslint": "90.135.0",
+    "polar-test": "90.135.0",
+    "polar-typescript": "90.135.0"
   },
   "dependencies": {
-    "polar-shared": "polar.latest",
-    "polar-url": "polar.latest"
+    "polar-shared": "90.135.0",
+    "polar-url": "90.135.0"
   },
   "files": [
     "**/*.js",
