--- a/packages/polar-cdk/package.json
+++ b/packages/polar-cdk/package.json
@@ -11,7 +11,8 @@
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "RESULT=\"$(find . -name '*.ts' -o -name '*.tsx' -not -path './node_modules/*' -not -name '*.d.ts*')\" && if [ -z \"$RESULT\" ]; then echo 'Nothing to Compile'; else yarn run tsc; fi;",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "karma": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestK.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else npx karma start; fi;"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.117.0",
@@ -22,7 +23,9 @@
     "firebase-admin": "=9.11.0",
     "polar-eslint": "^2.1.126",
     "polar-typescript": "^2.1.126",
-    "ts-node": "^10.2.0"
+    "ts-node": "^10.2.0",
+    "polar-karma": "^2.1.126",
+    "polar-webpack": "^2.1.126"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.117.0",
