--- a/packages/polar-create-module/package.json
+++ b/packages/polar-create-module/package.json
@@ -8,7 +8,8 @@
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "RESULT=\"$(find . -name '*.ts' -o -name '*.tsx' -not -path './node_modules/*' -not -name '*.d.ts*')\" && if [ -z \"$RESULT\" ]; then echo 'Nothing to Compile'; else yarn run tsc; fi;",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "karma": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestK.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else npx karma start; fi;"
   },
   "bin": {
     "polar-create-module": "./bin/polar-create-module"
@@ -20,6 +21,8 @@
   "license": "ISC",
   "devDependencies": {
     "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-typescript": "^2.1.126",
+    "polar-karma": "^2.1.126",
+    "polar-webpack": "^2.1.126"
   }
 }
