--- a/packages/polar-desktop-app/package.json
+++ b/packages/polar-desktop-app/package.json
@@ -15,7 +15,8 @@
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix",
     "compile": "RESULT=\"$(find . -name '*.ts' -o -name '*.tsx' -not -path './node_modules/*' -not -name '*.d.ts*')\" && if [ -z \"$RESULT\" ]; then echo 'Nothing to Compile'; else yarn run tsc; fi;",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "karma": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestK.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else npx karma start; fi;"
   },
   "repository": "https://github.com/burtonator/polar-app-public",
   "keywords": [
@@ -57,7 +58,9 @@
     "thread-loader": "=3.0.1",
     "ts-loader": "=8.0.18",
     "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0"
+    "webpack-cli": "=4.5.0",
+    "polar-karma": "^2.1.126",
+    "polar-webpack": "^2.1.126"
   },
   "dependencies": {
     "polar-bookshelf": "^2.1.126",
