--- a/packages/polar-npm/package.json
+++ b/packages/polar-npm/package.json
@@ -9,7 +9,8 @@
     "mocha": "mocha -p --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "karma": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestK.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else npx karma start; fi;"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,9 @@
     "@types/node": "=14.14.35",
     "@types/pdfjs-dist": "2.1.71-polar.2",
     "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-typescript": "^2.1.126",
+    "polar-karma": "^2.1.126",
+    "polar-webpack": "^2.1.126"
   },
   "dependencies": {
     "polar-shared": "^2.1.126"
