--- a/packages/polar-release-metadata/package.json
+++ b/packages/polar-release-metadata/package.json
@@ -13,7 +13,8 @@
     "generate-release-metadata": "node src/ReleaseMetadataGenerator.js ../../polar-site/_posts/ > src/release-metadata.json",
     "mocha": "mocha -p --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
-    "eslintfix": "eslint -c ./.eslintrc.json . --fix"
+    "eslintfix": "eslint -c ./.eslintrc.json . --fix",
+    "karma": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestK.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else npx karma start; fi;"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +26,9 @@
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-eslint": "^2.1.126",
-    "polar-typescript": "^2.1.126"
+    "polar-typescript": "^2.1.126",
+    "polar-karma": "^2.1.126",
+    "polar-webpack": "^2.1.126"
   },
   "dependencies": {
     "@types/node": "=14.14.35",
