--- a/packages/polar-web-extension-api/package.json
+++ b/packages/polar-web-extension-api/package.json
@@ -11,7 +11,8 @@
     "mocha": "mocha -p --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslint": "eslint -c ./.eslintrc.json .",
     "eslintfix": "eslint -c ./.eslintrc.json . --fix",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "karma": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestK.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else npx karma start; fi;"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +31,9 @@
     "polar-typescript": "^2.1.126",
     "ts-loader": "=8.0.18",
     "webpack": "=5.26.3",
-    "webpack-cli": "=4.5.0"
+    "webpack-cli": "=4.5.0",
+    "polar-karma": "^2.1.126",
+    "polar-webpack": "^2.1.126"
   },
   "dependencies": {
     "@types/karma": "^5.0.1",
